# LP-test1

./: .gitignore  CMakeLists.txt  README.md
src/: duplicate_element.cpp  duplicate_element.h  main.cpp  max.cpp  max.h  merge_sort.cpp  merge_sort.h  poll.cpp  poll.h  search.h
